# llm-finetune-inference-lab

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.gpu.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/distributed/: accelerate_fsdp.yaml  accelerate_zero3.yaml  deepspeed_zero3.json
configs/profile/: colab_a100.yaml  cpu_smoke.yaml
docs/: distributed.md
docs/adr/: 0001-base-model.md  0002-qlora-over-full-finetune.md  0003-dpo-pairs-from-execution-failures.md  0004-execution-accuracy-metric.md  0005-vllm-serving.md
notebooks/: run_on_colab.ipynb
pipelines/: train_pipeline.py
src/lab/: cli.py  config.py  exceptions.py  logging.py
src/lab/data/: clean.py  download.py  format.py  prepare.py  schema.py  stats.py
src/lab/eval/: judge.py  local_generate.py  perplexity.py  runner.py  sql_exec.py
src/lab/monitoring/: gpu.py
src/lab/quantization/: awq.py  bench_quant.py  gguf.py  merge.py
src/lab/serving/: ab_test.py  bench.py  client.py  vllm_server.py
src/lab/training/: common.py  dpo.py  pairs.py  sft.py
tests/: test_cli.py  test_config.py  test_data.py  test_eval_runner.py  test_local_generate.py  test_monitoring.py  test_pairs.py  test_quantization.py  test_serving.py  test_smoke_train.py  test_sql_exec.py
ui/: app.py
