[project]
name = "llm-finetune-inference-lab"
version = "0.1.0"
description = "End-to-end LLM fine-tuning lab: QLoRA SFT + DPO for text-to-SQL on a single A100, quantized export and vLLM serving"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "dataeclipse" }]
dependencies = [
    "pydantic>=2.11",
    "structlog>=25.4",
    "typer>=0.16",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "datasets>=3.6",
    "sqlglot>=26.0",
    "numpy>=2.2",
    "httpx>=0.28",
    "openai>=1.90",
    "tenacity>=9.1",
]

[project.optional-dependencies]
train = [
    "torch>=2.7",
    "transformers>=4.53",
    "peft>=0.15",
    "trl>=0.18",
    "accelerate>=1.7",
    "wandb>=0.20",
    "bitsandbytes>=0.46; sys_platform == 'linux'",
]
serve = [
    "vllm>=0.9; sys_platform == 'linux'",
]
quant = [
    "autoawq>=0.2.9; sys_platform == 'linux'",
]
ui = [
    "gradio>=5.34",
]
pipelines = [
    "prefect>=3.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.2",
    "ruff>=0.12",
    "black>=25.1",
    "mypy>=1.16",
    "pre-commit>=4.2",
    "pandas-stubs>=2.2",
]

[project.scripts]
lab = "lab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ASYNC", "S", "PTH"]
ignore = ["S101"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "ASYNC", "S603", "S607"]
"src/lab/config.py" = ["S104"]
"src/lab/data/format.py" = ["S311"]
"src/lab/monitoring/gpu.py" = ["S603", "S607"]
"src/lab/serving/vllm_server.py" = ["S603"]
"src/lab/quantization/gguf.py" = ["S603"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["lab"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "peft.*",
    "trl.*",
    "torch.*",
    "datasets.*",
    "bitsandbytes.*",
    "vllm.*",
    "awq.*",
    "wandb.*",
    "gradio.*",
    "prefect.*",
    "accelerate.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "smoke: slow cpu smoke tests that download a small model",
    "gpu: requires CUDA",
]

[tool.coverage.run]
source = ["src/lab"]
omit = ["src/lab/ui/*", "src/lab/distributed/*"]
